--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 @import "button";
 @import "button-group";
+@import "radio";
 @import "common/icon.scss";
 
 [class*="ml-icon-"] {
