--- a/src/styles/common/var.scss
+++ b/src/styles/common/var.scss
@@ -58,6 +58,12 @@ $--color-primary-light-9: mix(
   $--color-primary,
   90%
 ) !default; /* ecf5ff */
+$--background-color-base: #f5f7fa !default;
+$--border-color-light: #e4e7ed !default;
+/// color|1|Border Color|3
+$--border-color-lighter: #ebeef5 !default;
+/// color|1|Border Color|3
+$--border-color-extra-light: #f2f6fc !default;
 
 /* Border
  -------------------------- */
@@ -68,9 +74,16 @@ $--border-base: $--border-width-base $--border-style-base $--border-color-base !
 $--border-radius-base: 4px !default;
 $--border-radius-small: 2px !default;
 $--border-color-lighter: #ebeef5 !default;
+$--border-radius-circle: 100% !default;
 
 /* font
   -------------------------- */
 $--font-size-base: 14px !default;
 $--font-weight-primary: 500 !default;
 $--font-weight-secondary: 100 !default;
+
+/* Disable base
+-------------------------- */
+$--disabled-fill-base: $--background-color-base !default;
+$--disabled-color-base: $--color-text-placeholder !default;
+$--disabled-border-base: $--border-color-light !default;
