--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,9 @@
 @import "button";
 @import "button-group";
 @import "radio";
+@import "radio-group";
+@import "radio-button";
+@import "checkbox";
 @import "common/icon.scss";
 
 [class*="ml-icon-"] {
