--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,6 +5,8 @@
 @import "radio-group";
 @import "radio-button";
 @import "checkbox";
+@import "checkbox-group";
+@import "checkbox-button";
 @import "common/icon.scss";
 
 [class*="ml-icon-"] {
