--- a/src/styles/common/var.scss
+++ b/src/styles/common/var.scss
@@ -10,6 +10,7 @@ $--color-danger: #f56c6c !default;
   -------------------------- */
 $--color-white: #ffffff !default;
 $--color-black: #000000 !default;
+$--color-text-primary: #303133 !default;
 $--color-text-regular: #606266 !default;
 $--color-text-placeholder: #c0c4cc !default;
 $--border-color-base: #dcdfe6 !default;
