--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,7 @@
 @import "checkbox";
 @import "checkbox-group";
 @import "checkbox-button";
+@import "switch";
 @import "common/icon.scss";
 
 [class*="ml-icon-"] {
