--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,8 @@
 @import "checkbox-group";
 @import "checkbox-button";
 @import "switch";
+@import "form";
+@import "input";
 @import "common/icon.scss";
 
 [class*="ml-icon-"] {
