--- a/src/styles/common/var.scss
+++ b/src/styles/common/var.scss
@@ -12,8 +12,11 @@ $--color-white: #ffffff !default;
 $--color-black: #000000 !default;
 $--color-text-primary: #303133 !default;
 $--color-text-regular: #606266 !default;
+$--color-text-secondary: #909399 !default;
 $--color-text-placeholder: #c0c4cc !default;
 $--border-color-base: #dcdfe6 !default;
+$--border-color-light: #e4e7ed !default;
+$--border-color-lighter: #ebeef5 !default;
 $--color-primary-light-1: mix(
   $--color-white,
   $--color-primary,
