--- a/src/styles/common/var.scss
+++ b/src/styles/common/var.scss
@@ -83,6 +83,7 @@ $--border-radius-circle: 100% !default;
 /* font
   -------------------------- */
 $--font-size-base: 14px !default;
+$--font-size-medium: 16px !default;
 $--font-weight-primary: 500 !default;
 $--font-weight-secondary: 100 !default;
 
