--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -82,7 +82,7 @@ $--input-height: 40px !default;
 
   & .ml-input__clear {
     color: $--color-text-placeholder;
-    font-size: $--font-size-base;
+    font-size: $--font-size-medium;
     cursor: pointer;
     transition: $--color-transition-base;
 
