--- a/src/styles/checkbox-button.scss
+++ b/src/styles/checkbox-button.scss
@@ -1,6 +1,7 @@
 @import "common/var";
 @import "mixins/mixins";
 @import "mixins/_button";
+@import "mixins/utils";
 
 @include b(checkbox-button) {
   position: relative;
