--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,15 +10,21 @@
 @import "switch";
 @import "form";
 @import "input";
+@import "tag";
+@import "tooltip";
 @import "common/icon.scss";
+@import "common/transition.scss";
 
 [class*="ml-icon-"] {
   font-family: "moli-iconfont";
   font-style: normal;
+  font-weight: 400;
+  font-variant: normal;
+  text-transform: none;
+  display: inline-block;
 }
 
 .ml-icon-loading {
-  display: inline-block;
   animation: rotating 2s linear infinite;
 }
 
