--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,7 @@
 @import "input";
 @import "tag";
 @import "tooltip";
+@import "select";
 @import "common/icon.scss";
 @import "common/transition.scss";
 
