--- a/src/styles/radio-button.scss
+++ b/src/styles/radio-button.scss
@@ -32,7 +32,7 @@
       color: $--color-primary;
     }
 
-    & [class*="el-icon-"] {
+    & [class*="ml-icon-"] {
       line-height: 0.9;
 
       & + span {
