--- a/src/styles/tag.scss
+++ b/src/styles/tag.scss
@@ -175,7 +175,7 @@
     height: 28px;
     line-height: 26px;
 
-    .el-icon-close {
+    .ml-icon-close {
       transform: scale(0.8);
     }
   }
@@ -185,7 +185,7 @@
     padding: 0 10px;
     line-height: 24px;
 
-    .el-icon-close {
+    .ml-icon-close {
       transform: scale(0.6);
     }
   }
@@ -195,7 +195,7 @@
     padding: 0 10px;
     line-height: 20px;
 
-    .el-icon-close {
+    .ml-icon-close {
       margin-left: -4px;
       transform: scale(0.4);
     }
