--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,8 @@
 @import "tag";
 @import "tooltip";
 @import "select";
+@import "message";
+@import "notify";
 @import "common/icon.scss";
 @import "common/transition.scss";
 
