--- a/src/styles/common/var.scss
+++ b/src/styles/common/var.scss
@@ -69,6 +69,16 @@ $--border-color-lighter: #ebeef5 !default;
 /// color|1|Border Color|3
 $--border-color-extra-light: #f2f6fc !default;
 
+$--color-success-light: mix($--color-white, $--color-success, 80%) !default;
+$--color-warning-light: mix($--color-white, $--color-warning, 80%) !default;
+$--color-danger-light: mix($--color-white, $--color-danger, 80%) !default;
+$--color-info-light: mix($--color-white, $--color-info, 80%) !default;
+
+$--color-success-lighter: mix($--color-white, $--color-success, 90%) !default;
+$--color-warning-lighter: mix($--color-white, $--color-warning, 90%) !default;
+$--color-danger-lighter: mix($--color-white, $--color-danger, 90%) !default;
+$--color-info-lighter: mix($--color-white, $--color-info, 90%) !default;
+
 /* Border
  -------------------------- */
 $--border-width-base: 1px !default;
