--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,6 +17,11 @@
 @import "message";
 @import "message-box";
 @import "notify";
+@import "loading";
+@import "col";
+@import "row";
+@import "table";
+@import "table-column";
 @import "common/icon.scss";
 @import "common/transition.scss";
 
