--- a/src/styles/radio.scss
+++ b/src/styles/radio.scss
@@ -37,48 +37,48 @@
     }
   }
 
-  //   @include m(medium) {
-  //     &.is-bordered {
-  //       padding: $--radio-bordered-medium-padding;
-  //       border-radius: $--button-medium-border-radius;
-  //       height: $--radio-bordered-medium-height;
-  //       .el-radio__label {
-  //         font-size: $--button-medium-font-size;
-  //       }
-  //       .el-radio__inner {
-  //         height: $--radio-bordered-medium-input-height;
-  //         width: $--radio-bordered-medium-input-width;
-  //       }
-  //     }
-  //   }
-  //   @include m(small) {
-  //     &.is-bordered {
-  //       padding: $--radio-bordered-small-padding;
-  //       border-radius: $--button-small-border-radius;
-  //       height: $--radio-bordered-small-height;
-  //       .el-radio__label {
-  //         font-size: $--button-small-font-size;
-  //       }
-  //       .el-radio__inner {
-  //         height: $--radio-bordered-small-input-height;
-  //         width: $--radio-bordered-small-input-width;
-  //       }
-  //     }
-  //   }
-  //   @include m(mini) {
-  //     &.is-bordered {
-  //       padding: $--radio-bordered-mini-padding;
-  //       border-radius: $--button-mini-border-radius;
-  //       height: $--radio-bordered-mini-height;
-  //       .el-radio__label {
-  //         font-size: $--button-mini-font-size;
-  //       }
-  //       .el-radio__inner {
-  //         height: $--radio-bordered-mini-input-height;
-  //         width: $--radio-bordered-mini-input-width;
-  //       }
-  //     }
-  //   }
+  @include m(medium) {
+    &.is-bordered {
+      padding: 10px 20px 0 10px;
+      border-radius: $--border-radius-base;
+      height: 36px;
+      .ml-radio__label {
+        font-size: $--font-size-base;
+      }
+      .ml-radio__inner {
+        height: 14px;
+        width: 14px;
+      }
+    }
+  }
+  @include m(small) {
+    &.is-bordered {
+      padding: 8px 15px 0 10px;
+      border-radius: #{$--border-radius-base - 1};
+      height: 32px;
+      .ml-radio__label {
+        font-size: 12px;
+      }
+      .ml-radio__inner {
+        height: 12px;
+        width: 12px;
+      }
+    }
+  }
+  @include m(mini) {
+    &.is-bordered {
+      padding: 6px 15px 0 10px;
+      border-radius: #{$--border-radius-base - 1};
+      height: 28px;
+      .ml-radio__label {
+        font-size: 12px;
+      }
+      .ml-radio__inner {
+        height: 12px;
+        width: 12px;
+      }
+    }
+  }
 
   &:last-child {
     margin-right: 0;
