--- a/src/styles/common/var.scss
+++ b/src/styles/common/var.scss
@@ -138,3 +138,63 @@ $--index-popper: 2000 !default;
 $--popup-modal-background-color: $--color-black !default;
 /// opacity||Other|1
 $--popup-modal-opacity: 0.5 !default;
+
+/* Link
+-------------------------- */
+$--link-color: $--color-primary-light-2 !default;
+$--link-hover-color: $--color-primary !default;
+
+/* Break-point
+--------------------------*/
+$--sm: 768px !default;
+$--md: 992px !default;
+$--lg: 1200px !default;
+$--xl: 1920px !default;
+
+$--breakpoints: (
+  "xs": (
+    max-width: $--sm - 1
+  ),
+  "sm": (
+    min-width: $--sm
+  ),
+  "md": (
+    min-width: $--md
+  ),
+  "lg": (
+    min-width: $--lg
+  ),
+  "xl": (
+    min-width: $--xl
+  )
+);
+
+$--breakpoints-spec: (
+  "xs-only": (
+    max-width: $--sm - 1
+  ),
+  "sm-and-up": (
+    min-width: $--sm
+  ),
+  "sm-only": "(min-width: #{$--sm}) and (max-width: #{$--md - 1})",
+  "sm-and-down": (
+    max-width: $--md - 1
+  ),
+  "md-and-up": (
+    min-width: $--md
+  ),
+  "md-only": "(min-width: #{$--md}) and (max-width: #{$--lg - 1})",
+  "md-and-down": (
+    max-width: $--lg - 1
+  ),
+  "lg-and-up": (
+    min-width: $--lg
+  ),
+  "lg-only": "(min-width: #{$--lg}) and (max-width: #{$--xl - 1})",
+  "lg-and-down": (
+    max-width: $--xl - 1
+  ),
+  "xl-only": (
+    min-width: $--xl
+  )
+);
