--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,7 @@
 @import "switch";
 @import "form";
 @import "input";
+@import "input-number";
 @import "tag";
 @import "tooltip";
 @import "select";
@@ -22,6 +23,8 @@
 @import "row";
 @import "table";
 @import "table-column";
+@import "slider";
+@import "badge";
 @import "common/icon.scss";
 @import "common/transition.scss";
 
