--- a/src/styles/mixins/utils.scss
+++ b/src/styles/mixins/utils.scss
@@ -19,6 +19,19 @@
   }
 }
 
+@mixin utils-vertical-center {
+  $selector: &;
+
+  @at-root {
+    #{$selector}::after {
+      display: inline-block;
+      content: "";
+      height: 100%;
+      vertical-align: middle;
+    }
+  }
+}
+
 @mixin utils-ellipsis {
   overflow: hidden;
   text-overflow: ellipsis;
