progerss pagination 组件

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,6 +25,8 @@
 @import "table-column";
 @import "slider";
 @import "badge";
+@import "progress";
+@import "pagination";
 @import "common/icon.scss";
 @import "common/transition.scss";
 
