--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,6 +27,16 @@
 @import "badge";
 @import "progress";
 @import "pagination";
+@import "breadcrumb";
+@import "breadcrumb-item";
+@import "step";
+@import "steps";
+@import "backtop";
+@import "timeline";
+@import "timeline-item";
+@import "collapse";
+@import "menu";
+@import "dropdown";
 @import "common/icon.scss";
 @import "common/transition.scss";
 
@@ -37,6 +47,11 @@
   font-variant: normal;
   text-transform: none;
   display: inline-block;
+  line-height: 1;
+  vertical-align: baseline;
+  display: inline-block;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .ml-icon-loading {
