--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -37,6 +37,9 @@
 @import "collapse";
 @import "menu";
 @import "dropdown";
+@import "popover";
+@import "popconfirm";
+@import "image";
 @import "common/icon.scss";
 @import "common/transition.scss";
 
