--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -40,6 +40,9 @@
 @import "popover";
 @import "popconfirm";
 @import "image";
+@import "swiper";
+@import "swiper-item";
+@import "rate";
 @import "common/icon.scss";
 @import "common/transition.scss";
 
