--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import "alert";
 @import "button";
 @import "button-group";
+@import "dialog";
 @import "radio";
 @import "radio-group";
 @import "radio-button";
