--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,6 +21,8 @@
 @import "notify";
 @import "loading";
 @import "col";
+@import "collapse";
+@import "color-picker";
 @import "row";
 @import "table";
 @import "table-column";
@@ -35,7 +37,6 @@
 @import "backtop";
 @import "timeline";
 @import "timeline-item";
-@import "collapse";
 @import "menu";
 @import "dropdown";
 @import "popover";
