--- a/src/styles/color-picker.scss
+++ b/src/styles/color-picker.scss
@@ -248,7 +248,7 @@
     padding: 15px;
     font-size: 12px;
     &:hover {
-      color: tint($--color-primary, $--button-hover-tint-percent);
+      color: tint($--color-primary, 20%);
     }
   }
 }
