--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import "base";
 @import "alert";
 @import "button";
 @import "button-group";
@@ -46,36 +47,10 @@
 @import "swiper-item";
 @import "rate";
 @import "popup";
-@import "common/icon.scss";
-@import "common/transition.scss";
-
-[class*="ml-icon-"] {
-  font-family: "moli-iconfont";
-  font-style: normal;
-  font-weight: 400;
-  font-variant: normal;
-  text-transform: none;
-  display: inline-block;
-  line-height: 1;
-  vertical-align: baseline;
-  display: inline-block;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import "date-picker";
+@import "time-picker";
+@import "time-select";
 
 :focus {
   outline: none;
-}
-
-.ml-icon-loading {
-  animation: rotating 2s linear infinite;
-}
-
-@keyframes rotating {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
