--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -50,6 +50,8 @@
 @import "date-picker";
 @import "time-picker";
 @import "time-select";
+@import "cascader";
+@import "cascader-panel";
 
 :focus {
   outline: none;
