--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -52,6 +52,8 @@
 @import "time-select";
 @import "cascader";
 @import "cascader-panel";
+@import "upload";
+@import "transfer";
 
 :focus {
   outline: none;
