--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -53,8 +53,6 @@
 @import "cascader";
 @import "cascader-panel";
 @import "upload";
+@import "tree";
 @import "transfer";
-
-:focus {
-  outline: none;
-}
+@import "infinite-scroll";
