--- a/src/styles/icon.scss
+++ b/src/styles/icon.scss
@@ -1,9 +1,7 @@
 @font-face {
   font-family: "moli-iconfont";
-  src: url("//at.alicdn.com/t/font_1694283_5nha0l0aha.woff?t=1586423452617")
-      format("woff"),
-    url("//at.alicdn.com/t/font_1694283_5nha0l0aha.ttf?t=1586423452617")
-      format("truetype");
+  src: url("./fonts/iconfont.woff") format("woff"),
+    url("./fonts/iconfont.ttf") format("truetype");
   font-weight: normal;
   font-display: "auto";
   font-style: normal;
@@ -25,6 +23,49 @@
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.ml-icon-close-line:before {
+  content: "\e61d";
+}
+
+.ml-icon-menu:before {
+  content: "\e66d";
+}
+
+.ml-icon-system:before {
+  content: "\e625";
+}
+
+.ml-icon-tissue:before {
+  content: "\e60f";
+}
+
+.ml-icon-menu-toggle:before {
+  content: "\e843";
+}
+
+.ml-icon-menu-expand:before {
+  content: "\e844";
+}
+
+.ml-icon-img-error:before {
+  content: "\e7c2";
+}
+
+.ml-icon-address:before {
+  content: "\e61e";
+}
+
+.ml-icon-send:before {
+  content: "\e692";
+}
+
+.ml-icon-login-out:before {
+  content: "\e613";
+}
+
+.ml-icon-notice:before {
+  content: "\e845";
 }
 
 .ml-icon-date:before {
